tests/paczka1/small_fuzzy/50803085.err
Error in line 4: qCil4gZZyo A842 72,8
Error in line 5: qCil4gZZyo A263 58,6
